Fix header on small screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -53,6 +53,29 @@
     font-size: 20px;
 }
 
+@media (max-width: 640px) {
+  .header {
+    height: auto;
+  }
+
+  .header img {
+    height: 100px;
+    width: 100px;
+  }
+
+  .headerText h1 {
+    font-size: 42px;
+  }
+
+  .headerText h3 {
+    font-size: 18px;
+  }
+
+  .headerLinks a {
+    font-size: 14px;
+  }
+}
+
 .icons {
     display: flex;
     flex-direction: column;
